# roger-ton-tokens

./: .dockerignore  .editorconfig  .env.example  .env.railway.example  .gitignore  Acton.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  justfile  pyproject.toml  railway.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: f4acf49956f4_initial_schema.py
api-tests/: conftest.py  test_health.py
apps/api/: config.py  db.py  db_migrate.py  logging_config.py  main.py
apps/api/middleware/: request_log.py
apps/api/models/: __init__.py  order.py  wallet.py
apps/api/routers/: auth.py  checkout.py  debug.py  telegram_bot.py  wallet.py
apps/api/services/: orders.py  telegram_api.py  telegram_auth.py  wallet.py
contracts/: JettonMinter.tolk  README.md  messages.tolk
frontend/: .env.example  astro.config.mjs  components.json  index.html  nixpacks.toml  package-lock.json  package.json  railway.toml  tailwind.config.mjs  tsconfig.json  vite.config.ts
frontend/public/: tonconnect-manifest.json
frontend/scripts/: prebuild.mjs
frontend/src/: App.tsx  app.css  env.d.ts  main.tsx  telegram.d.ts  types.ts  vite-env.d.ts
frontend/src/components/: BuyStarsButton.tsx  BuyTonButton.tsx  ProductCard.tsx  StatusDialog.tsx  StoreApp.tsx  TonWalletSection.tsx
frontend/src/hooks/: useTelegramAuth.ts
scripts/: buy-time.tolk  entrypoint.sh  mint.tolk  railway_check_env.py  repl.py  seed_products.py  set_telegram_webhook.py  smoke_test_local.py  withdraw.tolk
tests/: buy-time.test.tolk  redeem-transfer.test.tolk  withdraw.test.tolk
(+9 files in other folders)
